# Ensembler

./: .codecov.yml  .gitignore  .lgtm.yml  .pre-commit-config.yaml  .pypirc  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  __init__.py  environment.yml  environment_unix.yml  environment_windows.yml  pyproject.toml  requirements.txt  requirements_unix.txt  requirements_unix.yml  requirements_windows.txt  setup.cfg  setup.py  versioneer.py
.circleci/: config.yml
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml  buid_sphinx_doc.yml  buildDoc.yml  codeql.yml  lgtm.yaml  python-package-conda.yml  python-package.yml  python-publish.yml
devtools/: README.md
devtools/conda-envs/: environment_unix_DEV.yml  environment_unix_versionSafe.yml  environment_windows.yml  requirements_unix.txt  requirements_windows.txt  test_env.yaml
devtools/pip_requirements/: requirements_unix.txt  requirements_windows.txt
devtools/scripts/: create_conda_env.py
docs/: .buildinfo  BasicPotentials.html  BasicPotentials.ipynb  Makefile  README.html  README.md  api.html  api.rst  conf.py  do_api_doc.sh  genindex.html  getting_started.html  getting_started.rst  index.html  index.rst  intro.html  introduction.html  make.bat  objects.inv  py-modindex.html  search.html  searchindex.js  tutorial.html
docs/Api_Documentation/: ensembler.analysis.freeEnergyCalculation.html  ensembler.analysis.html  ensembler.ensemble.exchange_pattern.html  ensembler.ensemble.html  ensembler.ensemble.replica_exchange.html  ensembler.ensemble.replicas_dynamic_parameters.html  ensembler.potentials.ND.html  ensembler.potentials.OneD.html  ensembler.potentials.TwoD.html  ensembler.potentials.biased_potentials.biasOneD.html  ensembler.potentials.biased_potentials.biasTwoD.html  ensembler.potentials.biased_potentials.html  ensembler.potentials.html  ensembler.samplers.html  ensembler.samplers.newtonian.html  ensembler.samplers.optimizers.html  ensembler.samplers.stochastic.html  ensembler.system.basic_system.html  ensembler.system.eds_system.html  ensembler.system.html  ensembler.system.perturbed_system.html  ensembler.util.basic_class.html  ensembler.util.dataStructure.html  ensembler.util.ensemblerTypes.html  ensembler.util.html  index.html  (+7 more)
ensembler/: __init__.py  __version__.py  _version.py  ensembler.py  freeEnergyCalculation.py
examples/: BasicPotentials.ipynb  ConveyorBelt.ipynb  EDS.ipynb  EnhancedSampling.ipynb  Example_ConveyorBelt.ipynb  Example_EDS.ipynb  Example_EnhancedSampling.ipynb  Example_FreeEnergyCalculationSimulation.ipynb  FreeEnergyCalculationSimulation.ipynb  Tutorial_Potentials.ipynb  exampleConveyorBelt.ipynb  testPint.ipynb
test/: run_all_tests.py  test_potential1D.py  test_potential2D.py  test_potentialND.py  test_potential_scaffolds.py  test_system.py
(+501 files in other folders)
