[build-system]
requires=[
	"setuptools>=61.0",
	"versioningit",
]
build-backend = "setuptools.build_meta"

[project]
name = "ensembler"
dynamic = ["version"]
authors=[
    {name="Benjamin Ries", email="benjamin-ries@outlook.com"},
    {name="David Friedrich Hahn"},
    {name="Stephanie Linker"},
    {name="Sereina Riniker", email="sriniker@ethz.com"},

]

dependencies = [
    'typing', #Code: used for type declarations
    'pytest', #Code: used for testing
    'pandas', #Code: core functionality
    'numpy', #Code: core functionality
    'sympy', #Code: core functionality
    'scipy', #Code: core functionality
    'matplotlib', #Visualization
    'jupyter', # Tutorial/Examples: basics
    'ipywidgets',# Tutorial/Examples: Interactive widgets
    'tqdm',# Tutorial/Examples: nice progressbar
    'ffmpeg', #Visualizations: for animations in general
    'pytest',
    'pytest-cov'
]

description="Ensembler is a tool for fast and efficient development of simulation methods or for teaching purposes."
keywords=["teaching", "method_development", "statistical_mechanics", "statistical_thermodynamics", "physics", "chemistry",
            "free_energy_calculations", "free energy", "enhanced sampling", "RE-EDS", "EDS", "Conveyor_Belt_TI", "numerical_integration", "science"]
readme="README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme", "nbsphinx", "m2r"]

[project.urls]
"Homepage" = "https://github.com/rinikerlab/Ensembler"

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git"
match = ["*"]
default-tag = "0.0.0"

[tool.versioningit.write]
file = "src/ensembler/_version.py"
