# Helper file to handle all configs

[metadata]
description-file = README.md

[coverage:run]
# .coveragerc to control coverage.py and pytest-cov
omit =
# Omit the tests
    */tests/*
# Omit generated versioneer
    ensembler/_version.py
# Omit visualizations:
    */visualisations/*

[yapf]
# YAPF, in .style.yapf files this shows up as "[style]" header
COLUMN_LIMIT = 119
INDENT_WIDTH = 4
USE_TABS = False

[flake8]
# Flake8, PyFlakes, etc
max-line-length = 119

[versioneer]
# Automatic version numbering scheme
VCS = git
style = pep440
versionfile_source = ensembler/_version.py
versionfile_build = ensembler/_version.py
tag_prefix = ''

[aliases]
test = pytest
